--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    
+    <header class="header">
+        <img class="header-logo" src="./assets/images/Marca_Portugues-02.svg" alt="Logo Rota de Mercúrio">
+        <nav>
+            <ul class="menu-principal">
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#portfolio">Portfólio</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
