--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,15 +12,27 @@
 <body>
     <header class="header">
         <img class="header-logo" src="./assets/images/Marca_Portugues-02.svg" alt="Logo Rota de Mercúrio">
-        <nav>
-            <ul class="menu-principal">
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#portfolio">Portfólio</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+        <div id="inline_header">
+            <nav>
+                <ul class="menu-principal">
+                    <li><a href="#sobre" class="menu_link active">Sobre</a></li>
+                    <li><a href="#servicos" class="menu_link">Serviços</a></li>
+                    <li><a href="#portfolio" class="menu_link">Portfólio</a></li>
+                    <li><a href="#skills" class="menu_link">Skills</a></li>
+                    <li><a href="#contato" class="menu_link">Contato</a></li>
+                </ul>
+            </nav>
+            <div id="header_toggle">
+                <i id="toggleTheme" class="bi bi-sun"></i>
+            </div>
+        </div>
     </header>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <script src="./assets/js/scripts.js"></script>
 </body>
 </html>
