--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
             </div>
         </div>
     </header>
-    <section></section>
+    <section id="about">
+        <img src="./assets/images/English Post.png" alt="Imagens Portfólio" id="foto-1">
+        <div id="secao-inicio-texto">
+            <h3 id="titulo-h3-foto-1">Projetos em</h3>
+            <h1 id="titulo-h1-foto-1">Programação e UX design</h1>
+            <p id="texto-foto-1">Porfólio de Alisson Cavalcanti, profissional com dez anos de experiência em comunicação e dois anos de experiência em programação.
+            <br><br>
+            Veja a seguir uma seleção de trabalhos desenvolvidos ao longo dessa jornada de aprendizado.</p>
+            <a href="#portfolio"><button id="botao-foto-1"><span id="text-botao-foto-1">Saiba mais</span></button></a>
+        </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
