--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             <a href="#portfolio"><button id="botao-foto-1"><span id="text-botao-foto-1">Saiba mais</span></button></a>
         </div>
     </section>
+    <section id="badges">
+        <span class="badge-container"><img src="./assets/images/javascript-logo.jpg" alt="Logo Javascript" class="badge"></span>
+        <span class="badge-container"><img src="./assets/images/css3-html5-logo-500px.png" alt="Logos HTML e CSS" class="badge"></span>
+        <span class="badge-container"><img src="./assets/images/Figma-Logo.png" alt="Logo Figma" class="badge"></span>
+        <span class="badge-container"><img src="./assets/images/photoshop.png" alt="Logo Photoshop" class="badge"></span>
+        <span class="badge-container"><img src="./assets/images/illustrator-logo.png" alt="Logo Illustrator" class="badge"></span>
+        <span class="badge-container"><img src="./assets/images/after effects.webp" alt="Logo After Effects" class="badge"></span>
+    </section>
     <section></section>
     <section></section>
     <section></section>
