--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="inline_header">
             <nav>
                 <ul class="menu-principal">
-                    <li><a href="#sobre" class="menu_link active">Sobre</a></li>
+                    <li><a href="#about" class="menu_link active">Sobre</a></li>
                     <li><a href="#servicos" class="menu_link">Serviços</a></li>
                     <li><a href="#portfolio" class="menu_link">Portfólio</a></li>
                     <li><a href="#skills" class="menu_link">Skills</a></li>
@@ -27,7 +27,7 @@
             </div>
         </div>
     </header>
-    <section id="about">
+    <section id="start">
         <img src="./assets/images/English Post.png" alt="Imagens Portfólio" id="foto-1">
         <div id="secao-inicio-texto">
             <h3 id="titulo-h3-foto-1">Projetos em</h3>
@@ -46,7 +46,23 @@
         <span class="badge-container"><img src="./assets/images/illustrator-logo.png" alt="Logo Illustrator" class="badge"></span>
         <span class="badge-container"><img src="./assets/images/after effects.webp" alt="Logo After Effects" class="badge"></span>
     </section>
-    <section></section>
+    <section id="about">
+        <div id="secao-about-texto">
+            <h3 id="titulo-h3-foto-2">Sobre</h3>
+            <h1 id="titulo-h1-foto-2">Alisson Cavalcanti</h1>
+            <p id="texto-foto-2">Formado desde 2017 em Publicidade e desde 2024 em Informática para Negócios, tenho na versatilidade profissional o meu maior diferencial.<br><br>Ao longo desses anos, pude desenvolver soluções para empresas de diversas áreas, como saúde, arquitetura e psicologia, sempre aplicando o melhor do design e usabilidade.<br><br>Veja mais abaixo.</p>
+            <div id="about-skills">
+                <span class="about-skill">Design</span>
+                <span class="about-skill">Social Media</span>
+                <span class="about-skill">Vídeo</span>
+                <span class="about-skill">Protótipos</span>
+                <span class="about-skill">Apps</span>
+                <span class="about-skill">Sites</span>
+            </div>
+            <a href="#servicos"><button id="botao-foto-2"><span id="text-botao-foto-2">Saiba mais</span></button></a>
+        </div>
+        <img src="./assets/images/Profile.png" alt="Foto Alisson Cavalcanti" id="foto-2">
+    </section>
     <section></section>
     <section></section>
     <section></section>
