Início do accordion

--- a/index.html
+++ b/index.html
@@ -63,7 +63,58 @@
         </div>
         <img src="./assets/images/Profile.png" alt="Foto Alisson Cavalcanti" id="foto-2">
     </section>
-    <section></section>
+    <section id="servicos">
+        <div id="secao-servicos-texto">
+            <h3 id="titulo-h3-foto-3">Serviços</h3>
+            <h1 id="titulo-h3-foto-3">Do design ao código</h1>
+            <p id="texto-foto-3">Conte comigo para desenvolver uma ampla gama de soluções, possíveis graças ao domínio de diversos softwares e habilidades.</p>
+        </div>
+        <div id="secao-servicos-imagem-accordion">
+            <img src="./assets/images/pexels-kevin-ku-92347-577585.jpg" alt="Imagem de um computador com códigos de programação" id="foto-3">
+            <div id="accordion">
+                <div class="item-accordion active">
+                    <button class="header-accordion">
+                        <div class="header-accordion-esquerda">
+                            <i class="bi bi-pencil-square"></i>
+                            <span>Design Gráfico</span>
+                        </div>
+                        <i class="bi bi-chevron-down"></i>
+                    </button>
+                    <p class="texto-accordion">Criação de layouts equilibrados e voltados às vendas de quaisquer tipos de produtos, para meios impressos e digitais.</p>
+                </div>
+                <div class="item-accordion">
+                    <button class="header-accordion">
+                        <div class="header-accordion-esquerda">
+                            <i class="bi bi-camera-video"></i>
+                            <span>Edição de vídeos</span>
+                        </div>
+                        <i class="bi bi-chevron-down"></i>
+                    </button>
+                    <p class="texto-accordion">Captura e edição de vídeos convencionais ou com motion graphics.</p>
+                </div>
+                <div class="item-accordion">
+                    <button class="header-accordion">
+                        <div class="header-accordion-esquerda">
+                            <i class="bi bi-app-indicator"></i>
+                            <span>Apps low code</span>
+                        </div>
+                        <i class="bi bi-chevron-down"></i>
+                    </button>
+                    <p class="texto-accordion">Utilização de tecnologias de low code para criação ágil de aplicações web e mobile.</p>
+                </div>
+                <div class="item-accordion">
+                    <button class="header-accordion">
+                        <div class="header-accordion-esquerda">
+                            <i class="bi bi-code"></i>
+                            <span>Programação</span>
+                        </div>
+                        <i class="bi bi-chevron-down"></i>
+                    </button>
+                    <p class="texto-accordion">Criação de softwares para agregar valor a negócios de quaisquer segmentos.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
