Finalização das seções

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p id="texto-foto-1">Porfólio de Alisson Cavalcanti, profissional com dez anos de experiência em comunicação e dois anos de experiência em programação.
             <br><br>
             Veja a seguir uma seleção de trabalhos desenvolvidos ao longo dessa jornada de aprendizado.</p>
-            <a href="#portfolio"><button id="botao-foto-1"><span id="text-botao-foto-1">Saiba mais</span></button></a>
+            <a href="#servicos"><button id="botao-foto-1"><span id="text-botao-foto-1">Saiba mais</span></button></a>
         </div>
     </section>
     <section id="badges">
@@ -115,9 +115,101 @@
             </div>
         </div>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
+    <section id="portfolio">
+        <div id="secao-portfolio-texto">
+            <h3 id="titulo-h3-foto-4">Portfólio</h3>
+            <h1 id="titulo-h3-foto-4">Meus projetos</h1>
+            <p id="texto-foto-4">Veja alguns dos meus projetos, com foco nos softwares e desafios de código feitos nos últimos anos.</p>
+        </div>
+        <div id="itens-portfolio">
+            <div class="item-portfolio">
+                <img src="./assets/images/minhassessoes.jpg" alt="">
+                <span class="portfolio-titulo">App de Psicologia</span>
+                <span class="portfolio-texto">Aplicativo para agendamento de consultas e organização de sessões e pagamentos</span>
+            </div>
+            <div class="item-portfolio">
+                <img src="./assets/images/arqkit.jpg" alt="">
+                <span class="portfolio-titulo">App de Arquitetura</span>
+                <span class="portfolio-texto">Contagem de tempo de projetos, apresentação e aprovação com o cliente</span>
+            </div>
+            <div class="item-portfolio">
+                <img src="./assets/images/desafio-dio.jpg" alt="">
+                <span class="portfolio-titulo">Desafios de códiog DIO</span>
+                <span class="portfolio-texto">Resultados de desafios em HTML, CSS e Javascript, feitos durante a jornada de Frontend do Santander na plataforma DIO</span>
+            </div>
+        </div>
+    </section>
+    <section id="skills">
+        <div id="secao-skills-texto">
+            <h3 id="titulo-h3-foto-5">Habilidades</h3>
+            <h1 id="titulo-h3-foto-5">Domínio de softwares e linguagens</h1>
+            <p id="texto-foto-5">Veja uma classificação de 1 a 5 estrelas de habilidades que utilizo no meu dia a dia.</p>
+        </div>
+        <div id="secao-skills-imagem-habilidades">
+            <img src="./assets/images/iyus-sugiharto-jpkxJAcp6a4-unsplash.jpg" alt="Imagem de um computador com códigos de programação" id="foto-5">
+            <div id="habilidades">
+                <div class="texto-habilidades-estrelas">
+                    <span class="texto-habilidades">Photoshop, Illustrator e InDesign</span>
+                    <div class="stars">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+                <div class="texto-habilidades-estrelas">
+                    <span class="texto-habilidades">Premiere e After Effects</span>
+                    <div class="stars">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+                <div class="texto-habilidades-estrelas">
+                    <span class="texto-habilidades">Figma</span>
+                    <div class="stars">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+                <div class="texto-habilidades-estrelas">
+                    <span class="texto-habilidades">FlutterFlow</span>
+                    <div class="stars">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+                <div class="texto-habilidades-estrelas">
+                    <span class="texto-habilidades">Programação Frontend</span>
+                    <div class="stars">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contato">
+        <div id="secao-contato-texto">
+            <h3 id="titulo-h3-foto-6">Contato</h3>
+            <h1 id="titulo-h1-foto-6">Vamos conversar?</h1>
+            <a href="https://wa.me/5517997037743"><button class="botoes-contato"><span class="text-botoes-contato">WhatsApp</span></button></a>
+            <a href="https://www.linkedin.com/in/alisson-cavalcanti-web/"><button class="botoes-contato"><span class="text-botoes-contato">LinkedIn</span></button></a>
+            <a href="https://github.com/alissoncavalcanti/"><button class="botoes-contato"><span class="text-botoes-contato">GitHub</span></button></a>
+        </div>
+        <div id="secao-contato-botoes-imagem">
+            <img src="./assets/images/michal-biernat-h0xEUQXzU38-unsplash.jpg" alt="" id="foto-6">
+        </div>
+    </section>
     <script src="./assets/js/scripts.js"></script>
 </body>
 </html>
